...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_feed_title"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="xkcd.com" />

            <TextView
...
                android:maxLines="3"
                tools:text="Lorem ipsum categorized libraries" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton_options_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_menu_overflow_light" />

    </LinearLayout>

...
