...

    //Feed
    <string name="dialog_message_delete_feed">Are you want to delete feed %1$s ?</string>
    <string name="tooltip_notifications_toggle_menu_disable">Disable background updates</string>
    <string name="tooltip_notifications_toggle_menu_enable">Enable background updates</string>

    <string name="menu_popup_feed_list_delete">Delete</string>
    <string name="menu_popup_feed_list_info">Show details</string>

    <string name="snackbar_action_button_retry">Retry</string>
    <string name="snackbar_text_updated_articles">%1$s new articles</string>

    //Article
...
